# lrsan

./: README.md
analyzer/: .gitignore  Makefile
analyzer/src/: CMakeLists.txt
analyzer/src/lib/: CMakeLists.txt  CallGraph.cc  CallGraph.h  Common.h  Config.h  CriticalVar.cc  CriticalVar.h  LRSan.cc  LRSan.h  PointerAnalysis.cc  PointerAnalysis.h
encoded-errno/include/linux/: errno.h
llvm/: build-llvm.sh
